--- a/DrawPad/Info.plist
+++ b/DrawPad/Info.plist
@@ -30,5 +30,7 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSDesktopFolderUsageDescription</key>
+	<string>DrawPadはスクリーンショットを「デスクトップ」フォルダに保存します。</string>
 </dict>
 </plist>
